chapter2 dataloader part added

--- a/chapter2.ipynb
+++ b/chapter2.ipynb
@@ -324,6 +324,81 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# DataLoader"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[tensor([[0.2809],\n",
+       "         [0.3253],\n",
+       "         [0.1560],\n",
+       "         [0.5924],\n",
+       "         [0.0651],\n",
+       "         [0.8872],\n",
+       "         [0.4938],\n",
+       "         [0.0055],\n",
+       "         [0.1409],\n",
+       "         [0.0885],\n",
+       "         [0.1849],\n",
+       "         [0.7290],\n",
+       "         [0.8662],\n",
+       "         [0.3117],\n",
+       "         [0.6842],\n",
+       "         [0.1987]]),\n",
+       " tensor([[1.5846],\n",
+       "         [1.8057],\n",
+       "         [1.2901],\n",
+       "         [2.1687],\n",
+       "         [1.1559],\n",
+       "         [2.8708],\n",
+       "         [1.9060],\n",
+       "         [1.0632],\n",
+       "         [1.1211],\n",
+       "         [1.0708],\n",
+       "         [1.5888],\n",
+       "         [2.4927],\n",
+       "         [2.6805],\n",
+       "         [1.7637],\n",
+       "         [2.3492],\n",
+       "         [1.2654]])]"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "train_loader = DataLoader(dataset=train_data, batch_size=16, shuffle=True)\n",
+    "\n",
+    "next(iter(train_loader))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Writing data_preparation/v1.py\n"
+     ]
+    }
+   ],
+   "source": []
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
