--- a/chapter2.ipynb
+++ b/chapter2.ipynb
@@ -385,18 +385,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Writing data_preparation/v1.py\n"
+      "Overwriting data_preparation/v1.py\n"
      ]
     }
    ],
-   "source": []
+   "source": [
+    "%%writefile data_preparation/v1.py\n",
+    "\n",
+    "X_train_tensor = torch.as_tensor(X_train).float()\n",
+    "y_train_tensor = torch.as_tensor(y_train).float()\n",
+    "\n",
+    "train_data = TensorDataset(X_train_tensor, y_train_tensor)\n",
+    "\n",
+    "train_loader = DataLoader(dataset=train_data, batch_size=16, shuffle=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%run -i data_preparation/v1.py"
+   ]
   },
   {
    "cell_type": "code",
