chapter2 dataloader added to training process

--- a/chapter2.ipynb
+++ b/chapter2.ipynb
@@ -417,6 +417,153 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Adding the data loader to the training process"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%run -i model_configuration/v1.py"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Writing model_training/v2.py\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%writefile model_training/v2.py\n",
+    "\n",
+    "epochs = 1000\n",
+    "\n",
+    "losses = []\n",
+    "\n",
+    "for _ in range(epochs):\n",
+    "\n",
+    "    mini_batch_losses = []\n",
+    "\n",
+    "    for x_batch, y_batch in train_loader:\n",
+    "\n",
+    "        x_batch = x_batch.to(device)\n",
+    "        y_batch = y_batch.to(device)\n",
+    "\n",
+    "        mini_batch_losses.append(train_step_fn(x_batch, y_batch))\n",
+    "\n",
+    "    loss = np.mean(mini_batch_losses)\n",
+    "\n",
+    "    losses.append(loss)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%run -i model_training/v2.py"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Creating a function to get a mini batch loss"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def get_minibatch_loss(device, data_loader, step_fn):\n",
+    "\n",
+    "    mini_batch_losses = []\n",
+    "\n",
+    "    for x_batch, y_batch in data_loader:\n",
+    "\n",
+    "        x_batch = x_batch.to(device)\n",
+    "        y_batch = y_batch.to(device)\n",
+    "\n",
+    "        mini_batch_losses.append(step_fn(x_batch, y_batch))\n",
+    "\n",
+    "    loss = np.mean(mini_batch_losses)\n",
+    "    \n",
+    "    return loss"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Writing model_training/v3.py\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%writefile model_training/v3.py\n",
+    "\n",
+    "epochs = 1000\n",
+    "\n",
+    "losses = []\n",
+    "\n",
+    "for _ in range(epochs):\n",
+    "\n",
+    "    loss = get_minibatch_loss(device, train_loader, train_step_fn)\n",
+    "\n",
+    "    losses.append(loss)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%run -i model_training/v3.py"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "OrderedDict([('0.weight', tensor([[1.9707]], device='cuda:0')),\n",
+       "             ('0.bias', tensor([1.0268], device='cuda:0'))])"
+      ]
+     },
+     "execution_count": 38,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "model.state_dict()"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
