--- a/chapter2.ipynb
+++ b/chapter2.ipynb
@@ -564,6 +564,58 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Splitting data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Writing data_preparation/v2.py\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%writefile data_preparation/v2.py\n",
+    "\n",
+    "X_tensor = torch.as_tensor(X).float()\n",
+    "y_tensor = torch.as_tensor(y).float()\n",
+    "\n",
+    "train_ratio = 0.8\n",
+    "\n",
+    "dataset = TensorDataset(X_tensor, y_tensor)\n",
+    "\n",
+    "n_total = len(dataset)\n",
+    "\n",
+    "n_train = int(n_total * train_ratio)\n",
+    "\n",
+    "n_valid = n_total - n_train\n",
+    "\n",
+    "train_data, valid_data = random_split(dataset, [n_train, n_valid])\n",
+    "\n",
+    "train_loader = DataLoader(dataset=train_data, batch_size=16, shuffle=True)\n",
+    "\n",
+    "valid_loader = DataLoader(dataset=valid_data, batch_size=16)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%run -i data_preparation/v2.py"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
