chapter2 evaluation added

--- a/chapter2.ipynb
+++ b/chapter2.ipynb
@@ -616,6 +616,76 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Evaluation"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def make_val_step_fn(model, lossfn):\n",
+    "\n",
+    "    def perform_val_step(x, y):\n",
+    "\n",
+    "        model.eval()\n",
+    "\n",
+    "        y_hat = model(x)\n",
+    "\n",
+    "        loss = lossfn(y_hat, y)\n",
+    "\n",
+    "        return loss.item()\n",
+    "    \n",
+    "    return perform_val_step"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Writing model_configuration/v2.py\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%writefile model_configuration/v2.py\n",
+    "\n",
+    "lr = 0.1\n",
+    "\n",
+    "device = 'cuda' if torch.cuda.is_available() else 'cpu'\n",
+    "\n",
+    "torch.manual_seed(42)\n",
+    "\n",
+    "model = nn.Sequential(nn.Linear(1, 1)).to(device)\n",
+    "\n",
+    "optimizer = optim.SGD(model.parameters(), lr=lr)\n",
+    "\n",
+    "lossfn = nn.MSELoss(reduction='mean')\n",
+    "\n",
+    "train_step_fn = make_train_step_fn(model, optimizer, lossfn)\n",
+    "\n",
+    "val_step_fn = make_val_step_fn(model, lossfn)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%run -i model_configuration/v2.py"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
