chapter 2 training with validation added

--- a/chapter2.ipynb
+++ b/chapter2.ipynb
@@ -687,6 +687,50 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Writing model_training/v4.py\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%writefile model_training/v4.py\n",
+    "\n",
+    "epochs = 1000\n",
+    "\n",
+    "losses = []\n",
+    "\n",
+    "val_losses = []\n",
+    "\n",
+    "for _ in range(epochs):\n",
+    "\n",
+    "    loss = get_minibatch_loss(device, train_loader, train_step_fn)\n",
+    "\n",
+    "    losses.append(loss)\n",
+    "\n",
+    "    with torch.no_grad():\n",
+    "        \n",
+    "        val_loss = get_minibatch_loss(device, valid_loader, val_step_fn)\n",
+    "\n",
+    "        val_losses.append(val_loss)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%run -i model_training/v4.py"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
