chapter2 model config with writer added

--- a/chapter2.ipynb
+++ b/chapter2.ipynb
@@ -897,7 +897,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -910,13 +910,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "Reusing TensorBoard on port 6006 (pid 31660), started 0:17:09 ago. (Use '!kill 31660' to kill it.)"
+       "Reusing TensorBoard on port 6006 (pid 31660), started 0:18:46 ago. (Use '!kill 31660' to kill it.)"
       ]
      },
      "metadata": {},
@@ -926,11 +926,11 @@
      "data": {
       "text/html": [
        "\n",
-       "      <iframe id=\"tensorboard-frame-96b0b41bc543db36\" width=\"100%\" height=\"800\" frameborder=\"0\">\n",
+       "      <iframe id=\"tensorboard-frame-67c667b3cac6a9a2\" width=\"100%\" height=\"800\" frameborder=\"0\">\n",
        "      </iframe>\n",
        "      <script>\n",
        "        (function() {\n",
-       "          const frame = document.getElementById(\"tensorboard-frame-96b0b41bc543db36\");\n",
+       "          const frame = document.getElementById(\"tensorboard-frame-67c667b3cac6a9a2\");\n",
        "          const url = new URL(\"http://localhost\");\n",
        "          const port = 6006;\n",
        "          if (port) {\n",
@@ -951,6 +951,71 @@
    ],
    "source": [
     "%tensorboard --logdir runs"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Creating a model configuration with SummaryWriter"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Writing model_configuration/v3.py\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%writefile model_configuration/v3.py\n",
+    "\n",
+    "lr = 0.1\n",
+    "\n",
+    "device = 'cuda' if torch.cuda.is_available() else 'cpu'\n",
+    "\n",
+    "torch.manual_seed(42)\n",
+    "\n",
+    "model = nn.Sequential(nn.Linear(1, 1)).to(device)\n",
+    "\n",
+    "optimizer = optim.SGD(model.parameters(), lr=lr)\n",
+    "\n",
+    "lossfn = nn.MSELoss(reduction='mean')\n",
+    "\n",
+    "train_step_fn = make_train_step_fn(model, optimizer, lossfn)\n",
+    "\n",
+    "val_step_fn = make_val_step_fn(model, lossfn)\n",
+    "\n",
+    "writer = SummaryWriter('runs/simple_lr')\n",
+    "\n",
+    "dummy_x, dummy_y = next(iter(train_loader))\n",
+    "\n",
+    "writer.add_graph(model, dummy_x.to(device))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<Figure size 640x480 with 0 Axes>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "%run -i model_configuration/v3.py"
    ]
   },
   {
