chapter2 model training fn with  tensorboard added

--- a/chapter2.ipynb
+++ b/chapter2.ipynb
@@ -1019,6 +1019,131 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Creating model training with writer"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 62,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Writing model_training/v5.py\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%writefile model_training/v5.py\n",
+    "\n",
+    "epochs = 1000\n",
+    "\n",
+    "losses = []\n",
+    "\n",
+    "val_losses = []\n",
+    "\n",
+    "for epoch in range(epochs):\n",
+    "\n",
+    "    loss = get_minibatch_loss(device, train_loader, train_step_fn)\n",
+    "\n",
+    "    losses.append(loss)\n",
+    "\n",
+    "    with torch.no_grad():\n",
+    "        \n",
+    "        val_loss = get_minibatch_loss(device, valid_loader, val_step_fn)\n",
+    "\n",
+    "        val_losses.append(val_loss)\n",
+    "\n",
+    "    writer.add_scalars(\n",
+    "        main_tag='loss',\n",
+    "        tag_scalar_dict={'training': loss, 'validation': val_loss},\n",
+    "        global_step=epoch\n",
+    "    )\n",
+    "\n",
+    "writer.close()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 63,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%run -i model_training/v5.py"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 64,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "OrderedDict([('0.weight', tensor([[1.9678]], device='cuda:0')),\n",
+       "             ('0.bias', tensor([1.0186], device='cuda:0'))])"
+      ]
+     },
+     "execution_count": 64,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "model.state_dict()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 65,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Reusing TensorBoard on port 6006 (pid 31660), started 0:29:32 ago. (Use '!kill 31660' to kill it.)"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "\n",
+       "      <iframe id=\"tensorboard-frame-9e498a6540e4a573\" width=\"100%\" height=\"800\" frameborder=\"0\">\n",
+       "      </iframe>\n",
+       "      <script>\n",
+       "        (function() {\n",
+       "          const frame = document.getElementById(\"tensorboard-frame-9e498a6540e4a573\");\n",
+       "          const url = new URL(\"http://localhost\");\n",
+       "          const port = 6006;\n",
+       "          if (port) {\n",
+       "            url.port = port;\n",
+       "          }\n",
+       "          frame.src = url;\n",
+       "        })();\n",
+       "      </script>\n",
+       "    "
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "%tensorboard --logdir runs"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
