--- a/chapter2.ipynb
+++ b/chapter2.ipynb
@@ -1144,6 +1144,30 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Saving"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 66,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "checkpoint = {\n",
+    "    'epoch': epochs,\n",
+    "    'model_state_dict': model.state_dict(),\n",
+    "    'optimizer_state_dict': optimizer.state_dict(),\n",
+    "    'loss': losses,\n",
+    "    'val_loss': val_losses\n",
+    "}\n",
+    "\n",
+    "torch.save(checkpoint, \"model_checkpoint.pth\")"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
