chapter2 model loading added

--- a/chapter2.ipynb
+++ b/chapter2.ipynb
@@ -1168,6 +1168,80 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Loading"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 67,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%run -i data_preparation/v2.py\n",
+    "%run -i model_configuration/v3.py"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 68,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Sequential(\n",
+       "  (0): Linear(in_features=1, out_features=1, bias=True)\n",
+       ")"
+      ]
+     },
+     "execution_count": 68,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "checkpoint = torch.load('model_checkpoint.pth')\n",
+    "\n",
+    "model.load_state_dict(checkpoint['model_state_dict'])\n",
+    "optimizer.load_state_dict(checkpoint['optimizer_state_dict'])\n",
+    "\n",
+    "saved_epochs = checkpoint['epoch']\n",
+    "saved_loss = checkpoint['loss']\n",
+    "saved_val_loss = checkpoint['val_loss']\n",
+    "\n",
+    "model.train()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 69,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([[1.4122],\n",
+       "        [1.6877],\n",
+       "        [2.1402]], device='cuda:0', grad_fn=<AddmmBackward0>)"
+      ]
+     },
+     "execution_count": 69,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "new_input = torch.tensor([[.20], [.34], [.57]])\n",
+    "\n",
+    "model.eval()\n",
+    "\n",
+    "model(new_input.to(device))"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
