chapter2_1 class to account for all steps added

--- a/chapter2_1.ipynb
+++ b/chapter2_1.ipynb
@@ -30,6 +30,191 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class StepByStep(object):\n",
+    "    \n",
+    "    def __init__(self, model, loss_fn, optimizer):\n",
+    "        self.model = model\n",
+    "        self.loss_fn = loss_fn\n",
+    "        self.optimizer = optimizer\n",
+    "        self.device = 'cuda' if torch.cuda.is_available() else 'cpu'\n",
+    "        self.model.to(self.device)\n",
+    "\n",
+    "        self.train_loader = None\n",
+    "        self.valid_loader = None\n",
+    "        self.writer = None\n",
+    "\n",
+    "        self.losses = []\n",
+    "        self.valid_losses = []\n",
+    "        self.total_epochs = 0\n",
+    "\n",
+    "        self.train_step_fn = self._make_train_step_fn()\n",
+    "        self.valid_step_fn = self._make_valid_step_fn()\n",
+    "\n",
+    "    def to(self, device):\n",
+    "        try:\n",
+    "            self.device = device\n",
+    "            self.model.to(self.device)\n",
+    "        except RuntimeError:\n",
+    "            self.device = 'cuda' if torch.cuda.is_available() else 'cpu'\n",
+    "            print(f\"{device} not available, sending to {self.device}\")\n",
+    "            self.model.to(self.device)\n",
+    "\n",
+    "    def set_loaders(self, train_loader, valid_loader=None):\n",
+    "        self.train_loader = train_loader\n",
+    "        self.valid_loader = valid_loader\n",
+    "\n",
+    "    def set_tensorboard(self, name, folder='runs'):\n",
+    "        suffix = datetime.datetime.now().strftime('%Y%m%d%H%M%S')\n",
+    "        self.writer = SummaryWriter(f'{folder}/{name}_{suffix}')\n",
+    "\n",
+    "    def _make_train_step_fn(self):\n",
+    "\n",
+    "        def perform_train_step(x, y):\n",
+    "\n",
+    "            self.model.train()\n",
+    "\n",
+    "            y_hat = self.model(x)\n",
+    "\n",
+    "            loss = self.loss_fn(y_hat, y)\n",
+    "\n",
+    "            loss.backward()\n",
+    "\n",
+    "            self.optimizer.step()\n",
+    "            self.optimizer.zero_grad()\n",
+    "\n",
+    "            return loss.item()\n",
+    "        \n",
+    "        return perform_train_step\n",
+    "\n",
+    "    def _make_valid_step_fn(self):\n",
+    "\n",
+    "        def perform_val_step(x, y):\n",
+    "\n",
+    "            self.model.eval()\n",
+    "\n",
+    "            y_hat = self.model(x)\n",
+    "\n",
+    "            loss = self.loss_fn(y_hat, y)\n",
+    "\n",
+    "            return loss.item()\n",
+    "        \n",
+    "        return perform_val_step\n",
+    "    \n",
+    "    def _get_minibatch_loss(self, validation=False):\n",
+    "\n",
+    "        if validation:\n",
+    "            step_fn = self.valid_step_fn\n",
+    "            data_loader = self.valid_loader\n",
+    "        else:\n",
+    "            step_fn = self.train_step_fn\n",
+    "            data_loader = self.train_loader\n",
+    "\n",
+    "        if data_loader is None:\n",
+    "            return None\n",
+    "\n",
+    "        mini_batch_losses = []\n",
+    "\n",
+    "        for x_batch, y_batch in data_loader:\n",
+    "\n",
+    "            x_batch = x_batch.to(self.device)\n",
+    "            y_batch = y_batch.to(self.device)\n",
+    "\n",
+    "            mini_batch_losses.append(step_fn(x_batch, y_batch))\n",
+    "\n",
+    "        loss = np.mean(mini_batch_losses)\n",
+    "        \n",
+    "        return loss\n",
+    "    \n",
+    "    def set_seed(self, seed=42):\n",
+    "        torch.backends.cudnn.deterministic = True\n",
+    "        torch.backends.cudnn.benchmark = False\n",
+    "        torch.manual_seed(seed)\n",
+    "        np.random.seed(seed)\n",
+    "\n",
+    "    def train(self, epochs, seed=42):\n",
+    "\n",
+    "        self.set_seed(seed)\n",
+    "\n",
+    "        for epoch in epochs:\n",
+    "\n",
+    "            self.total_epochs += 1\n",
+    "\n",
+    "            loss = self._get_minibatch_loss(validation=False)\n",
+    "            self.losses.append(loss)\n",
+    "\n",
+    "            with torch.no_grad():\n",
+    "                valid_loss = self._get_minibatch_loss(validation=True)\n",
+    "                self.valid_losse.append(valid_loss)\n",
+    "\n",
+    "            if self.writer:\n",
+    "                scalars = {'training': loss}\n",
+    "\n",
+    "                if valid_loss is not None:\n",
+    "                    scalars.update({'validation': valid_loss})\n",
+    "\n",
+    "                self.writer.add_scalars(\n",
+    "                    main_tag='loss',\n",
+    "                    tag_scalar_dict=scalars,\n",
+    "                    global_step=epoch\n",
+    "                )\n",
+    "\n",
+    "        if self.writer:\n",
+    "            self.writer.flush()\n",
+    "\n",
+    "    def save_checkpoint(self, filename):\n",
+    "        checkpoint = {\n",
+    "            'epoch': self.total_epochs,\n",
+    "            'model_state_dict': self.model.state_dict(),\n",
+    "            'optimizer_state_dict': self.optimizer.state_dict(),\n",
+    "            'loss': self.losses,\n",
+    "            'val_loss': self.valid_losses\n",
+    "        }\n",
+    "\n",
+    "        torch.save(checkpoint, filename)\n",
+    "\n",
+    "    def load_checkpoint(self, filename):\n",
+    "        checkpoint = torch.load(filename)\n",
+    "\n",
+    "        self.model.load_state_dict(checkpoint['model_state_dict'])\n",
+    "        self.optimizer.load_state_dict(checkpoint['optimizer_state_dict'])\n",
+    "\n",
+    "        self.total_epochs = checkpoint['epoch']\n",
+    "        self.losses = checkpoint['loss']\n",
+    "        self.valid_losses = checkpoint['val_loss']\n",
+    "\n",
+    "        self.model.train()\n",
+    "\n",
+    "    def predict(self, x):\n",
+    "        self.model.eval()\n",
+    "        x_tensor = torch.as_tensor(x).float()\n",
+    "        y_hat_tensor = self.model(x_tensor.to(self.device))\n",
+    "        self.model.train()\n",
+    "        return y_hat_tensor.detach().cpu().numpy()\n",
+    "    \n",
+    "    def plot_losses(self):\n",
+    "        fig = plt.figure(figsize=(10, 4))\n",
+    "        plt.plot(self.losses, label='Training Loss', c='b')\n",
+    "        if self.valid_loader:\n",
+    "            plt.plot(self.valid_losses, label='Validation Loss', c='r')\n",
+    "        plt.yscale('log')\n",
+    "        plt.xlabel('Epochs')\n",
+    "        plt.ylabel('Loss')\n",
+    "        plt.legend()\n",
+    "        plt.tight_layout()\n",
+    "        return fig\n",
+    "    \n",
+    "    def add_graph(self):\n",
+    "        if self.train_loader and self.writer:\n",
+    "            x_dummy, y_dummy = next(iter(self.train_loader))\n",
+    "            self.writer.add_graph(self.model, x_dummy.to(self.device))"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
