chapter2_1 training added

--- a/chapter2_1.ipynb
+++ b/chapter2_1.ipynb
@@ -29,8 +29,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Class"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -139,7 +146,7 @@
     "\n",
     "        self.set_seed(seed)\n",
     "\n",
-    "        for epoch in epochs:\n",
+    "        for epoch in range(epochs):\n",
     "\n",
     "            self.total_epochs += 1\n",
     "\n",
@@ -148,7 +155,7 @@
     "\n",
     "            with torch.no_grad():\n",
     "                valid_loss = self._get_minibatch_loss(validation=True)\n",
-    "                self.valid_losse.append(valid_loss)\n",
+    "                self.valid_losses.append(valid_loss)\n",
     "\n",
     "            if self.writer:\n",
     "                scalars = {'training': loss}\n",
@@ -211,6 +218,108 @@
     "        if self.train_loader and self.writer:\n",
     "            x_dummy, y_dummy = next(iter(self.train_loader))\n",
     "            self.writer.add_graph(self.model, x_dummy.to(self.device))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Synthetic data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "N = 100\n",
+    "ERROR_SCALE = 0.1\n",
+    "TRUE_B = 1\n",
+    "TRUE_W = 2\n",
+    "\n",
+    "np.random.seed(42)\n",
+    "\n",
+    "X = np.random.rand(N, 1)\n",
+    "error = ERROR_SCALE * np.random.randn(N, 1)\n",
+    "y = TRUE_B + TRUE_W * X + error"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Training"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%run -i data_preparation/v2.py"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Overwriting model_configuration/v4.py\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%writefile model_configuration/v4.py\n",
+    "\n",
+    "lr = 0.1\n",
+    "\n",
+    "torch.manual_seed(42)\n",
+    "\n",
+    "model = nn.Sequential(nn.Linear(1, 1))\n",
+    "\n",
+    "optimizer = optim.SGD(model.parameters(), lr=lr)\n",
+    "\n",
+    "loss_fn = nn.MSELoss(reduction='mean')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%run -i model_configuration/v4.py"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "AttributeError",
+     "evalue": "'StepByStep' object has no attribute 'valid_losse'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[15], line 4\u001b[0m\n\u001b[0;32m      2\u001b[0m sbs\u001b[39m.\u001b[39mset_loaders(train_loader, valid_loader)\n\u001b[0;32m      3\u001b[0m sbs\u001b[39m.\u001b[39mset_tensorboard(\u001b[39m'\u001b[39m\u001b[39mclassy\u001b[39m\u001b[39m'\u001b[39m)\n\u001b[1;32m----> 4\u001b[0m sbs\u001b[39m.\u001b[39;49mtrain(epochs\u001b[39m=\u001b[39;49m\u001b[39m1000\u001b[39;49m)\n",
+      "Cell \u001b[1;32mIn[14], line 115\u001b[0m, in \u001b[0;36mStepByStep.train\u001b[1;34m(self, epochs, seed)\u001b[0m\n\u001b[0;32m    113\u001b[0m \u001b[39mwith\u001b[39;00m torch\u001b[39m.\u001b[39mno_grad():\n\u001b[0;32m    114\u001b[0m     valid_loss \u001b[39m=\u001b[39m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_get_minibatch_loss(validation\u001b[39m=\u001b[39m\u001b[39mTrue\u001b[39;00m)\n\u001b[1;32m--> 115\u001b[0m     \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49mvalid_losse\u001b[39m.\u001b[39mappend(valid_loss)\n\u001b[0;32m    117\u001b[0m \u001b[39mif\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mwriter:\n\u001b[0;32m    118\u001b[0m     scalars \u001b[39m=\u001b[39m {\u001b[39m'\u001b[39m\u001b[39mtraining\u001b[39m\u001b[39m'\u001b[39m: loss}\n",
+      "\u001b[1;31mAttributeError\u001b[0m: 'StepByStep' object has no attribute 'valid_losse'"
+     ]
+    }
+   ],
+   "source": [
+    "sbs = StepByStep(model, loss_fn, optimizer)\n",
+    "sbs.set_loaders(train_loader, valid_loader)\n",
+    "sbs.set_tensorboard('classy')\n",
+    "sbs.train(epochs=1000)"
    ]
   },
   {
