chapter2_1 prediction added

--- a/chapter2_1.ipynb
+++ b/chapter2_1.ipynb
@@ -331,6 +331,30 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[2.0006933],\n",
+       "       [1.6050656],\n",
+       "       [2.3963208]], dtype=float32)"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "new_data = np.array([.5, .3, .7]).reshape(-1, 1)\n",
+    "\n",
+    "sbs.predict(new_data)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
