chapter3 data generation added

--- a/chapter3.ipynb
+++ b/chapter3.ipynb
@@ -225,6 +225,29 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Data generation"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X, y = make_moons(n_samples=100, noise=0.3, random_state=0)\n",
+    "\n",
+    "X_train, X_val, y_train, y_val = train_test_split(X, y, test_size=0.2, random_state=13)\n",
+    "\n",
+    "st_scaler = StandardScaler()\n",
+    "\n",
+    "X_train = st_scaler.fit_transform(X_train)\n",
+    "X_val = st_scaler.transform(X_val)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
