chapter3 dataloaders created

--- a/chapter3.ipynb
+++ b/chapter3.ipynb
@@ -248,6 +248,34 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Dataloaders"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "torch.manual_seed(13)\n",
+    "\n",
+    "X_train_tensor = torch.as_tensor(X_train).float()\n",
+    "y_train_tensor = torch.as_tensor(y_train.reshape(-1, 1)).float()\n",
+    "\n",
+    "X_val_tensor = torch.as_tensor(X_val).float()\n",
+    "y_val_tensor = torch.as_tensor(y_val.reshape(-1, 1)).float()\n",
+    "\n",
+    "train_dataset = TensorDataset(X_train_tensor, y_train_tensor)\n",
+    "train_loader = DataLoader(dataset=train_dataset, batch_size=16, shuffle=True)\n",
+    "\n",
+    "val_dataset = TensorDataset(X_val_tensor, y_val_tensor)\n",
+    "val_loader = DataLoader(dataset=val_dataset, batch_size=16)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
