chapter3 model configuration added

--- a/chapter3.ipynb
+++ b/chapter3.ipynb
@@ -276,6 +276,31 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Model configuration"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "lr = 0.1\n",
+    "\n",
+    "torch.manual_seed(42)\n",
+    "\n",
+    "model = nn.Sequential()\n",
+    "model.add_module('linear', nn.Linear(2, 1))\n",
+    "\n",
+    "optimizer = optim.SGD(model.parameters(), lr=lr)\n",
+    "\n",
+    "loss_logits_fn = nn.BCEWithLogitsLoss(reduction='mean')"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
