chapter4 data preparation added

--- a/chapter4.ipynb
+++ b/chapter4.ipynb
@@ -294,6 +294,28 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Data preparation"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X_tensor = torch.as_tensor(images/255).float()\n",
+    "y_tensor = torch.as_tensor(labels.reshape(-1, 1)).float()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
